# rsna-2023

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: config_rnn_full.yaml  config_rnn_kidney.yaml  config_rnn_liver.yaml  config_rnn_spleen.yaml  config_videomae_kidney.yaml  config_videomae_liver.yaml  config_videomae_spleen.yaml
scripts/: run.py
src/rsna_2023/: datasets.py  models.py  transforms.py  videomaev2.py
