[tool.poetry]
name = "rsna-2023"
version = "0.1.0"
description = ""
authors = ["Konstantin Sukharev <k.sukharev@gmail.com>"]
readme = "README.md"
packages = [{include = "rsna_2023", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
monai = {extras = ["einops", "lmdb", "nibabel", "pydicom"], version = "^1.2.0"}
torch = {version = "^2.0.1+cu118", source = "torch-cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch-cu118"}
pandas = "^2.0.3"
iterative-stratification = "^0.1.7"
lightning = "^2.0.6"
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
totalsegmentator = "^1.5.6"
pyarrow = "^13.0.0"
timm = "^0.9.7"
numpy = "1.23.5"
transformers = "^4.34.0"
seaborn = "^0.13.0"
lightning-bolts = "^0.7.0"


[tool.poetry.group.dev.dependencies]
kaggle = "^1.5.16"
tensorboard = "^2.14.0"
notebook = "6.4.8"
ipywidgets = "^8.1.1"


[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
